namespace java com.X.follow_recommendations.thriftjava
#@namespace scala com.X.follow_recommendations.thriftscala
#@namespace strato com.X.follow_recommendations

enum EngagementType {
    Click = 0
    Like = 1
    Mention = 2
    Retweet = 3
    ProfileView = 4
}
